libs/@local/hashql/hir/tests/ui/lower/checking/ctor-bounded-invalid.jsonc
//@ run: fail
//@ description: Test that type inference works for type constructors
["newtype", "Person<T: Number>", "T", ["Person", { "#literal": "2" }]]
//~^ ERROR This variable has conflicting type requirements
